2001-11-21  Akinori Ito <aito@fw.ipsj.or.jp>

	* Homepage URLs and author's mail addresses in the documents
	  are changed.

2001-11-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02459] 
	* XMakefile: update scripts/dirlist.cgi generation
	* scripts/multipart/multipart.cgi: removed
	* scripts/w3mman/w3mman scripts/w3mman/w3mman2html.cgi: removed
	
	* [w3m-dev 02462]
	* scripts/dirlist.in scripts/dirlist.cgi: removed
	* scripts/dirlist.cgi.in: added

2001-11-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* add rcsids

2001-11-21  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02454]
	* buffer.c (newBuffer): set COLS
	* display.c (displayBuffer redrawLine redrawLineRegion
	    cursorRight arrangeCursor cursorXY): 
	  new showLineNumber implementation
	* main.c (ctrCsrH shiftvisualpos shiftl shiftr _movL _movR
	   _followForm follow_map process_mouse):
	  use buf->COLS, buf->rootX
	* menu.c (popupMenu mainMn initSelectMenu):
	  use buf->rootX
	* etc.c (columnSkip): use buf->COLS
	* file.c (HTMLlineproc2body loadBuffer saveBufferDelNum getNextPage)
	  remove old showLineNumber codes
	* fm.h (Buffer): add rootX, COLS

2001-11-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* XMakefile (clean): rm tagtable.c
	* .cvsignore: XXMakefile config.h config.param

2001-11-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02455]
	* XMakefile.dist deflate.c: removed, not used
	* tagtable.c: removed, autogenerated files
	* XMakefile (mktable w3mbookmark w3mhelperpanel): use LIBS2
	* configure: add $bsdlib

2001-11-20  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* frame.c (newFrameSet): fix possible buffer overrun

2001-11-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* XXMakefile config.h: removed from CVS
	  these are autogenerated files.
	  config.h is moved to config.h.dist as sample config file.

2001-11-20  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02449]
	* file.c (HTMLtagproc1): reimplement meta refresh with
          setAlarmEvent()